# spectra-cli

./: .gitignore  .vercelignore  API_V2_DOCS.md  LICENSE  README.md  RELEASE.md  build.sh  improvement.md  process.md  pyproject.toml  render.yaml  requirements.txt  test_api.py  test_api.sh  vercel.json
.github/workflows/: publish.yml
api/: __init__.py  index.py  job_queue.py  models.py  requirements.txt  templates.py
spectra/: __init__.py  client.py  main.py
